[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "utils"
version = "3.0.0"
description = "Random jumble of scripts."
requires-python = ">=3.12"
dependencies = [
    "conduit",
    "markdown2>=2.5.4",
    "pandas>=2.3.3",
]

# ── Hatchling (build) ──────────────────────────────────────────────────────────
# Point Hatchling at the src/ package; this is the critical bit for src-layout.
[tool.hatch.build.targets.wheel]
packages = ["src/utils"]
sources = ["src"]

# ── pytest (test) ──────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
addopts = "-v -s --tb=short --no-header --showlocals --pdb -x"
log_cli = true
log_cli_level = "INFO"


# ── uv sources (local/editable deps) ───────────────────────────────────────────
[tool.uv.sources]
conduit = { path = "../conduit-project", editable = true }

# ── Scripts (CLI entry points) ─────────────────────────────────────────────────
[project.scripts]
readme = "utils.readme.readme:main"
usernames = "utils.diceware.dice:main"
passwords = "utils.passwords.password:main"
names = "utils.diceware.names:main"
addresses = "utils.diceware.addresses:main"
numbers = "utils.diceware.numbers:main"
